# skel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  manifold_circle.rs  riemannian_optimization.rs  simplex_boundary.rs  simplicial_complex.rs  vietoris_rips.rs
src/: complex.rs  filtration.rs  flow.rs  lib.rs  lie.rs  locus.rs  manifold.rs  optim.rs  topology.rs  vietoris_rips.rs
