[package]
name = "skel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Topology/shape primitives"
repository = "https://github.com/arclabs561/tekne"
documentation = "https://docs.rs/skel"
keywords = ["topology", "simplex", "tda"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = "0.16"

[dev-dependencies]
proptest = "1.5"
