[package]
name = "skel"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = true
description = "Topology and manifold primitives for TDA and geometric ML"
repository = "https://github.com/arclabs561/skel"
homepage = "https://github.com/arclabs561/skel"
documentation = "https://github.com/arclabs561/skel#readme"
readme = "README.md"
keywords = ["topology", "simplex", "tda"]
categories = ["algorithms", "mathematics", "science"]

[workspace]

[dependencies]
ndarray = "0.16"

[dev-dependencies]
proptest = "1.5"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
